
 Summary
 =======
 
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.45
 ============

 Released on 

 New features and improvements:

   - ofaHub: new hub management class (todo #948).
   - ofaIHubber: new interface for ofaHub management (todo #941).

 Bug fixes:

   - 

 Other changes:

   - ofaAccountSelectorBin: removed unused class.
   - ofaCollection: removed class.
   - ofaConcilCollection: removed class.
   - ofa_dossier_misc_import_csv(): removed function.
   - ofo_base_get_hub(), ofo_base_set_hub(): new methods.
   - ofo_dossier_new(): removed method.
   - ofaICollectionable: new interface for classes which have in-memory datasets.

-----------------------------------------------------------------------
 Version 0.44
 ============

 Released on 2015-01-04.

 New features and improvements:

   - TVA: new module for TVA operations management (todo #311).
   - ofaIDBModel: new DDL management interface (todo #951).

 Bug fixes:

   - DossierManager: close the currently opened dossier before deleting it (todo #943).
   - ofoRate: fix validity comparison (todo #946).

 Other changes:

   - myIGridList: new interface.
   - ofaApplication: new 'menu-defined' signal.
   - ofaIDBCustomer: new interface.

-----------------------------------------------------------------------
 Version 0.43
 ============

 Released on 2015-12-19.

 New features and improvements:

   - Reconciliation: let the user select displayed columns (todo #887).
   - Settlement: let the user select displayed columns.
   - ofaDossierNew: no more propose to open properties right after dossier creation.
   - ofaDossierNew: keep dossier name to embed squate brackets (todo #936).
   - ofaMySQLEditor: check autorized character set in database name (todo #470).